# pyct

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .travis.yml  MANIFEST.in  README.md  dodo.py  pixi.toml  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/: test.yaml
.github/workflows/: build.yaml  test.yaml
conda.recipe/: meta.yaml
conda.recipe/core/: meta.yaml
examples/: Foo_Notebook.ipynb  Test_Example_Notebook.ipynb  datasets.yml
examples/data/.data_stubs/: test_data.csv
examples/one/: tox.ini
pvutil/: __init__.py  cmd.py
pyct/: __init__.py  __main__.py  _conda.py  build.py  cmd.py  report.py
pyct/tests/: test_cmd.py  test_report.py
pyct/tests/examples/: datasets.yml
scripts/conda/: build.sh
scripts/conda/recipe/: meta.yaml
tests/: testA.yaml
