[metadata]
name = pyct
version = attr: param.version.get_setupcfg_version
description = python package common tasks for users (e.g. copy examples, fetch data, ...)
long_description = file: README.md
long_description_content_type = text/markdown
license = BSD 3-Clause License
license_file = LICENSE.txt
classifiers =
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Development Status :: 4 - Beta
author = PyViz
author_email = holoviews@gmail.com
maintainer = PyViz
maintainer_email = holoviews@gmail.com
url = https://ioam.github.io/parambokeh
project_urls =
    Bug Tracker = https://github.com/pyviz/pyct/issues
    Documentation = https://pyviz.github.io/pyct
    Source Code = https://github.com/pyviz/pyct

[options]
include_package_data = True
packages = find:
python_requires = >=2.7
install_requires =
    param

[options.extras_require]
cmd =
    pyyaml
    requests

tests =
    flake8
doc =
    nbsite
    sphinx_ioam_theme

[wheel]
universal = 1

[tool:autover.configparser_workaround.archive_commit=$Format:%h$]
